src/codegen/tests/debug_tests/snapshots/rusty__codegen__tests__debug_tests__expression_debugging__case_conditions_location_marked.snap
---
source: src/codegen/tests/debug_tests/expression_debugging.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

define i32 @myFunc() !dbg !4 {
entry:
  %myFunc = alloca i32, align [filtered]
    #dbg_declare(ptr %myFunc, !8, !DIExpression(), !10)
  store i32 0, ptr %myFunc, align [filtered]
  %load_myFunc = load i32, ptr %myFunc, align [filtered], !dbg !11
  switch i32 %load_myFunc, label %else [
    i32 1, label %case
    i32 2, label %case1
  ], !dbg !12

case:                                             ; preds = %entry
  store volatile i32 1, ptr %myFunc, align [filtered], !dbg !13
  br label %continue, !dbg !14

case1:                                            ; preds = %entry
  store volatile i32 1, ptr %myFunc, align [filtered], !dbg !15
  br label %continue, !dbg !16

else:                                             ; preds = %entry
  store volatile i32 1, ptr %myFunc, align [filtered], !dbg !17
  br label %continue, !dbg !18

continue:                                         ; preds = %else, %case1, %case
  store volatile i32 1, ptr %myFunc, align [filtered], !dbg !19
  %myFunc_ret = load i32, ptr %myFunc, align [filtered], !dbg !20
  ret i32 %myFunc_ret, !dbg !21
}

!llvm.module.flags = !{!0, !1}
!llvm.dbg.cu = !{!2}

!0 = !{i32 2, !"Dwarf Version", i32 5}
!1 = !{i32 2, !"Debug Info Version", i32 3}
!2 = distinct !DICompileUnit(language: DW_LANG_C, file: !3, producer: "RuSTy Structured text Compiler", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!3 = !DIFile(filename: "<internal>", directory: "")
!4 = distinct !DISubprogram(name: "myFunc", linkageName: "myFunc", scope: !3, file: !3, line: 2, type: !5, scopeLine: 3, flags: DIFlagPublic, spFlags: DISPFlagDefinition, unit: !2, retainedNodes: !7, keyInstructions: true)
!5 = !DISubroutineType(flags: DIFlagPublic, types: !6)
!6 = !{null}
!7 = !{}
!8 = !DILocalVariable(name: "myFunc", scope: !4, file: !3, line: 2, type: !9, align [filtered])
!9 = !DIBasicType(name: "DINT", size: 32, encoding: DW_ATE_signed, flags: DIFlagPublic)
!10 = !DILocation(line: 2, column: 17, scope: !4)
!11 = !DILocation(line: 3, column: 17, scope: !4)
!12 = !DILocation(line: 3, column: 17, scope: !4, atomGroup: 1, atomRank: 1)
!13 = !DILocation(line: 5, column: 16, scope: !4, atomGroup: 2, atomRank: 1)
!14 = !DILocation(line: 10, column: 12, scope: !4, atomGroup: 3, atomRank: 1)
!15 = !DILocation(line: 7, column: 16, scope: !4, atomGroup: 4, atomRank: 1)
!16 = !DILocation(line: 10, column: 12, scope: !4, atomGroup: 5, atomRank: 1)
!17 = !DILocation(line: 9, column: 16, scope: !4, atomGroup: 6, atomRank: 1)
!18 = !DILocation(line: 10, column: 12, scope: !4, atomGroup: 7, atomRank: 1)
!19 = !DILocation(line: 11, column: 12, scope: !4, atomGroup: 8, atomRank: 1)
!20 = !DILocation(line: 12, column: 8, scope: !4)
!21 = !DILocation(line: 12, column: 8, scope: !4, atomGroup: 9, atomRank: 1)
