src/codegen/tests/debug_tests/snapshots/rusty__codegen__tests__debug_tests__expression_debugging__conditional_return.snap
---
source: src/codegen/tests/debug_tests/expression_debugging.rs
expression: result
---
; ModuleID = 'main'
source_filename = "main"

define void @foo(i32 %0) !dbg !3 {
entry:
  %val = alloca i32, align 4, !dbg !8
  call void @llvm.dbg.declare(metadata i32* %val, metadata !9, metadata !DIExpression()), !dbg !10
  store i32 %0, i32* %val, align 4, !dbg !8
  %load_val = load i32, i32* %val, align 4, !dbg !11
  %tmpVar = icmp eq i32 %load_val, 5, !dbg !11
  br i1 %tmpVar, label %then_block, label %else_block, !dbg !11

then_block:                                       ; preds = %entry
  ret void, !dbg !8

else_block:                                       ; preds = %entry
  store i32 10, i32* %val, align 4, !dbg !12
  ret void, !dbg !12
}

; Function Attrs: nofree nosync nounwind readnone speculatable willreturn
declare void @llvm.dbg.declare(metadata, metadata, metadata) #0

attributes #0 = { nofree nosync nounwind readnone speculatable willreturn }

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Dwarf Version", i32 5}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "RuSTy Structured text Compiler", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!2 = !DIFile(filename: "main", directory: "src")
!3 = distinct !DISubprogram(name: "foo", linkageName: "foo", scope: !2, file: !2, line: 1, type: !4, scopeLine: 4, flags: DIFlagPublic, spFlags: DISPFlagDefinition, unit: !1, retainedNodes: !7)
!4 = !DISubroutineType(flags: DIFlagPublic, types: !5)
!5 = !{null, !6}
!6 = !DIBasicType(name: "DINT", size: 32, encoding: DW_ATE_signed, flags: DIFlagPublic)
!7 = !{}
!8 = !DILocation(line: 3, scope: !3)
!9 = !DILocalVariable(name: "val", scope: !3, file: !2, line: 1, type: !6)
!10 = !DILocation(line: 1, column: 23, scope: !3)
!11 = !DILocation(line: 2, scope: !3)
!12 = !DILocation(line: 5, scope: !3)

