src/codegen/tests/debug_tests/snapshots/rusty__codegen__tests__debug_tests__expression_debugging__external_impl_added_as_external_subroutine.snap
---
source: src/codegen/tests/debug_tests/expression_debugging.rs
expression: result
---
; ModuleID = 'main'
source_filename = "main"

%myPrg = type {}
%myFb = type {}

@myPrg_instance = external global %myPrg, !dbg !0
@__myFb__init = unnamed_addr constant %myFb zeroinitializer, !dbg !5

declare !dbg !10 i32 @myFunc()

declare !dbg !14 void @myPrg(%myPrg*)

declare !dbg !16 void @myFb(%myFb*)

!llvm.dbg.cu = !{!8}

!0 = !DIGlobalVariableExpression(var: !1, expr: !DIExpression())
!1 = distinct !DIGlobalVariable(name: "myPrg", scope: !2, file: !2, type: !3, isLocal: false, isDefinition: true)
!2 = !DIFile(filename: "main", directory: "")
!3 = !DICompositeType(tag: DW_TAG_structure_type, name: "myPrg", scope: !2, file: !2, align: 64, flags: DIFlagPublic, elements: !4, identifier: "myPrg")
!4 = !{}
!5 = !DIGlobalVariableExpression(var: !6, expr: !DIExpression())
!6 = distinct !DIGlobalVariable(name: "__myFb__init", scope: !2, file: !2, type: !7, isLocal: false, isDefinition: true)
!7 = !DICompositeType(tag: DW_TAG_structure_type, name: "myFb", scope: !2, file: !2, align: 64, flags: DIFlagPublic, elements: !4, identifier: "myFb")
!8 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "RuSTy Structured text Compiler", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, enums: !4, globals: !9, splitDebugInlining: false)
!9 = !{!0, !5}
!10 = !DISubprogram(name: "myFunc", linkageName: "myFunc", scope: !2, file: !2, line: 2, type: !11, scopeLine: 3, flags: DIFlagPublic, spFlags: 0, retainedNodes: !13)
!11 = !DISubroutineType(flags: DIFlagPublic, types: !12)
!12 = !{null}
!13 = <temporary!> !{}
!14 = !DISubprogram(name: "myPrg", linkageName: "myPrg", scope: !2, file: !2, line: 4, type: !11, scopeLine: 5, flags: DIFlagPublic, spFlags: 0, retainedNodes: !15)
!15 = <temporary!> !{}
!16 = !DISubprogram(name: "myFb", linkageName: "myFb", scope: !2, file: !2, line: 6, type: !11, scopeLine: 7, flags: DIFlagPublic, spFlags: 0, retainedNodes: !17)
!17 = <temporary!> !{}

