src/codegen/tests/debug_tests/snapshots/rusty__codegen__tests__debug_tests__expression_debugging__jump.snap
---
source: src/codegen/tests/debug_tests/expression_debugging.rs
expression: result
---
; ModuleID = 'main'
source_filename = "main"

%foo = type { i32 }

@foo_instance = global %foo zeroinitializer, !dbg !0

define void @foo(%foo* %0) !dbg !10 {
entry:
  call void @llvm.dbg.declare(metadata %foo* %0, metadata !14, metadata !DIExpression()), !dbg !15
  %val = getelementptr inbounds %foo, %foo* %0, i32 0, i32 0, !dbg !16
  br label %lbl, !dbg !16

lbl:                                              ; preds = %lbl, %entry
  %load_val = load i32, i32* %val, align 4, !dbg !15
  %tmpVar = icmp eq i32 %load_val, 0, !dbg !15
  br i1 %tmpVar, label %lbl, label %else_block, !dbg !17

else_block:                                       ; preds = %lbl
  store i32 1, i32* %val, align 4, !dbg !18
  ret void, !dbg !18
}

; Function Attrs: nofree nosync nounwind readnone speculatable willreturn
declare void @llvm.dbg.declare(metadata, metadata, metadata) #0

attributes #0 = { nofree nosync nounwind readnone speculatable willreturn }

!llvm.module.flags = !{!7}
!llvm.dbg.cu = !{!8}

!0 = !DIGlobalVariableExpression(var: !1, expr: !DIExpression())
!1 = distinct !DIGlobalVariable(name: "foo", scope: !2, file: !2, line: 1, type: !3, isLocal: false, isDefinition: true)
!2 = !DIFile(filename: "main", directory: "src")
!3 = !DICompositeType(tag: DW_TAG_structure_type, name: "foo", scope: !2, file: !2, line: 1, size: 32, align: 64, flags: DIFlagPublic, elements: !4, identifier: "foo")
!4 = !{!5}
!5 = !DIDerivedType(tag: DW_TAG_member, name: "val", scope: !2, file: !2, line: 1, baseType: !6, size: 32, align: 32, flags: DIFlagPublic)
!6 = !DIBasicType(name: "DINT", size: 32, encoding: DW_ATE_signed, flags: DIFlagPublic)
!7 = !{i32 2, !"Dwarf Version", i32 5}
!8 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "RuSTy Structured text Compiler", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, globals: !9, splitDebugInlining: false)
!9 = !{!0}
!10 = distinct !DISubprogram(name: "foo", linkageName: "foo", scope: !2, file: !2, line: 1, type: !11, scopeLine: 3, flags: DIFlagPublic, spFlags: DISPFlagDefinition, unit: !8, retainedNodes: !13)
!11 = !DISubroutineType(flags: DIFlagPublic, types: !12)
!12 = !{null}
!13 = !{}
!14 = !DILocalVariable(name: "foo", scope: !10, file: !2, line: 1, type: !3)
!15 = !DILocation(line: 1, scope: !10)
!16 = !DILocation(line: 2, scope: !10)
!17 = !DILocation(line: 3, scope: !10)
!18 = !DILocation(line: 4, scope: !10)

