src/codegen/tests/debug_tests/snapshots/rusty__codegen__tests__debug_tests__expression_debugging__non_callable_expressions_have_no_location.snap
---
source: src/codegen/tests/debug_tests/expression_debugging.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

define i32 @myFunc() !dbg !4 {
entry:
  %myFunc = alloca i32, align [filtered]
    #dbg_declare(ptr %myFunc, !8, !DIExpression(), !10)
  store i32 0, ptr %myFunc, align [filtered]
  %load_myFunc = load i32, ptr %myFunc, align [filtered], !dbg !11
  %myFunc_ret = load i32, ptr %myFunc, align [filtered], !dbg !12
  ret i32 %myFunc_ret, !dbg !13
}

!llvm.module.flags = !{!0, !1}
!llvm.dbg.cu = !{!2}

!0 = !{i32 2, !"Dwarf Version", i32 5}
!1 = !{i32 2, !"Debug Info Version", i32 3}
!2 = distinct !DICompileUnit(language: DW_LANG_C, file: !3, producer: "RuSTy Structured text Compiler", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!3 = !DIFile(filename: "<internal>", directory: "")
!4 = distinct !DISubprogram(name: "myFunc", linkageName: "myFunc", scope: !3, file: !3, line: 2, type: !5, scopeLine: 3, flags: DIFlagPublic, spFlags: DISPFlagDefinition, unit: !2, retainedNodes: !7, keyInstructions: true)
!5 = !DISubroutineType(flags: DIFlagPublic, types: !6)
!6 = !{null}
!7 = !{}
!8 = !DILocalVariable(name: "myFunc", scope: !4, file: !3, line: 2, type: !9, align [filtered])
!9 = !DIBasicType(name: "DINT", size: 32, encoding: DW_ATE_signed, flags: DIFlagPublic)
!10 = !DILocation(line: 2, column: 17, scope: !4)
!11 = !DILocation(line: 4, column: 12, scope: !4, atomGroup: 1, atomRank: 1)
!12 = !DILocation(line: 5, column: 8, scope: !4)
!13 = !DILocation(line: 5, column: 8, scope: !4, atomGroup: 2, atomRank: 1)
