src/codegen/tests/debug_tests/snapshots/rusty__codegen__tests__debug_tests__expression_debugging__repeat_conditions_location_marked.snap
---
source: src/codegen/tests/debug_tests/expression_debugging.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

define i32 @myFunc() !dbg !4 {
entry:
  %myFunc = alloca i32, align [filtered]
    #dbg_declare(ptr %myFunc, !8, !DIExpression(), !10)
  store i32 0, ptr %myFunc, align [filtered]
  %__ran_once_0 = alloca i8, align [filtered]
  store i8 0, ptr %__ran_once_0, align [filtered], !dbg !11
  br label %while_body, !dbg !12

while_body:                                       ; preds = %continue1, %entry
  %load___ran_once_0 = load i8, ptr %__ran_once_0, align [filtered], !dbg !13
  %0 = icmp ne i8 %load___ran_once_0, 0, !dbg !13
  br i1 %0, label %condition_body, label %continue1, !dbg !14

continue:                                         ; preds = %condition_body3
  store volatile i32 1, ptr %myFunc, align [filtered], !dbg !15
  %myFunc_ret = load i32, ptr %myFunc, align [filtered], !dbg !16
  ret i32 %myFunc_ret, !dbg !17

condition_body:                                   ; preds = %while_body
  %load_myFunc = load i32, ptr %myFunc, align [filtered], !dbg !18
  %tmpVar = icmp sgt i32 %load_myFunc, 10, !dbg !18
  %1 = zext i1 %tmpVar to i8, !dbg !18
  %2 = icmp ne i8 %1, 0, !dbg !18
  br i1 %2, label %condition_body3, label %continue2, !dbg !19

continue1:                                        ; preds = %continue2, %while_body
  store i8 1, ptr %__ran_once_0, align [filtered], !dbg !20
  store volatile i32 1, ptr %myFunc, align [filtered], !dbg !21
  br label %while_body, !dbg !22

condition_body3:                                  ; preds = %condition_body
  br label %continue, !dbg !23

buffer_block:                                     ; No predecessors!
  br label %continue2, !dbg !24

continue2:                                        ; preds = %buffer_block, %condition_body
  br label %continue1, !dbg !25
}

!llvm.module.flags = !{!0, !1}
!llvm.dbg.cu = !{!2}

!0 = !{i32 2, !"Dwarf Version", i32 5}
!1 = !{i32 2, !"Debug Info Version", i32 3}
!2 = distinct !DICompileUnit(language: DW_LANG_C, file: !3, producer: "RuSTy Structured text Compiler", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!3 = !DIFile(filename: "<internal>", directory: "")
!4 = distinct !DISubprogram(name: "myFunc", linkageName: "myFunc", scope: !3, file: !3, line: 2, type: !5, scopeLine: 3, flags: DIFlagPublic, spFlags: DISPFlagDefinition, unit: !2, retainedNodes: !7, keyInstructions: true)
!5 = !DISubroutineType(flags: DIFlagPublic, types: !6)
!6 = !{null}
!7 = !{}
!8 = !DILocalVariable(name: "myFunc", scope: !4, file: !3, line: 2, type: !9, align [filtered])
!9 = !DIBasicType(name: "DINT", size: 32, encoding: DW_ATE_signed, flags: DIFlagPublic)
!10 = !DILocation(line: 2, column: 17, scope: !4)
!11 = !DILocation(line: 0, scope: !4, atomGroup: 1, atomRank: 1)
!12 = !DILocation(line: 3, column: 12, scope: !4, atomGroup: 2, atomRank: 1)
!13 = !DILocation(line: 0, scope: !4)
!14 = !DILocation(line: 0, scope: !4, atomGroup: 3, atomRank: 1)
!15 = !DILocation(line: 6, column: 12, scope: !4, atomGroup: 4, atomRank: 1)
!16 = !DILocation(line: 7, column: 8, scope: !4)
!17 = !DILocation(line: 7, column: 8, scope: !4, atomGroup: 5, atomRank: 1)
!18 = !DILocation(line: 5, column: 18, scope: !4)
!19 = !DILocation(line: 5, column: 18, scope: !4, atomGroup: 6, atomRank: 1)
!20 = !DILocation(line: 0, scope: !4, atomGroup: 7, atomRank: 1)
!21 = !DILocation(line: 4, column: 16, scope: !4, atomGroup: 8, atomRank: 1)
!22 = !DILocation(line: 0, scope: !4, atomGroup: 9, atomRank: 1)
!23 = !DILocation(line: 0, scope: !4, atomGroup: 10, atomRank: 1)
!24 = !DILocation(line: 0, scope: !4, atomGroup: 11, atomRank: 1)
!25 = !DILocation(line: 0, scope: !4, atomGroup: 12, atomRank: 1)
