src/codegen/tests/debug_tests/snapshots/rusty__codegen__tests__debug_tests__expression_debugging__sink_source.snap
---
source: src/codegen/tests/debug_tests/expression_debugging.rs
expression: result
---
; ModuleID = 'main'
source_filename = "main"

%main = type { i32 }

@main_instance = global %main zeroinitializer, !dbg !0

define void @main(%main* %0) !dbg !10 {
entry:
  call void @llvm.dbg.declare(metadata %main* %0, metadata !14, metadata !DIExpression()), !dbg !15
  %x = getelementptr inbounds %main, %main* %0, i32 0, i32 0, !dbg !16
  store i32 5, i32* %x, align 4, !dbg !17
  ret void, !dbg !17
}

; Function Attrs: nofree nosync nounwind readnone speculatable willreturn
declare void @llvm.dbg.declare(metadata, metadata, metadata) #0

attributes #0 = { nofree nosync nounwind readnone speculatable willreturn }

!llvm.module.flags = !{!7}
!llvm.dbg.cu = !{!8}

!0 = !DIGlobalVariableExpression(var: !1, expr: !DIExpression())
!1 = distinct !DIGlobalVariable(name: "main", scope: !2, file: !2, line: 1, type: !3, isLocal: false, isDefinition: true)
!2 = !DIFile(filename: "main", directory: "src")
!3 = !DICompositeType(tag: DW_TAG_structure_type, name: "main", scope: !2, file: !2, line: 1, size: 32, align: 64, flags: DIFlagPublic, elements: !4, identifier: "main")
!4 = !{!5}
!5 = !DIDerivedType(tag: DW_TAG_member, name: "x", scope: !2, file: !2, line: 1, baseType: !6, size: 32, align: 32, flags: DIFlagPublic)
!6 = !DIBasicType(name: "DINT", size: 32, encoding: DW_ATE_signed, flags: DIFlagPublic)
!7 = !{i32 2, !"Dwarf Version", i32 5}
!8 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "RuSTy Structured text Compiler", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, globals: !9, splitDebugInlining: false)
!9 = !{!0}
!10 = distinct !DISubprogram(name: "main", linkageName: "main", scope: !2, file: !2, line: 1, type: !11, scopeLine: 1, flags: DIFlagPublic, spFlags: DISPFlagDefinition, unit: !8, retainedNodes: !13)
!11 = !DISubroutineType(flags: DIFlagPublic, types: !12)
!12 = !{null}
!13 = !{}
!14 = !DILocalVariable(name: "main", scope: !10, file: !2, line: 1, type: !3)
!15 = !DILocation(line: 1, scope: !10)
!16 = !DILocation(line: 0, scope: !10)
!17 = !DILocation(line: 4, scope: !10)

